# apps/backend/src/routes/diningRoute.ts
@@ -1,9 +1,9 @@
 import express from 'express';
-import diningController from '../controllers/diningController.js';
+import diningController from '../controllers/restaurantsController.js';
 
 // eslint-disable-next-line new-cap
 const router = express.Router();
 
-router.get('/', diningController.getResources);
+router.get('/restaurants', diningController.getRestaurants);
 
 export default router;
